--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-
-  <meta property="og:title"     content="WATCH VIDEO" />
-
-<meta property="og:description"   content=" " />
-     
+        <meta property="og:image" content="https://img.youtube.com/vi/12okhIhtYEk/maxresdefault.jpg" />
+        <meta property="og:title"     content="ജെസിബിക്ക് എന്തുകൊണ്ടാണ് മഞ്ഞ നിറം?" />
 <meta property="og:description"   content=" " />
     </head>
   
         <script type="text/javascript">
         
             window.onload = function() {
-                var d = "https://www.youtube.com/watch?v=AVLtNGijeWQ&t",
-		app = "vnd.youtube://AVLtNGijeWQ&t";
+                var d = "https://www.youtube.com/watch?v=12okhIhtYEk",
+		app = "vnd.youtube://12okhIhtYEk";
 
                 if( /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ) {
                     window.location = app; 
