--- a/actress.html
+++ b/actress.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta property="og:image" content="https://youtube.m4mediaplus.com/thump.png" />
+        <meta property="og:image" content="https://img.youtube.com/vi/AVLtNGijeWQ/hqdefault.jpg" />
         <meta property="og:title"     content="ബോളിവുഡ് നായികമാരുടെ വയസ്സ് | Shocking Real age of Young Bollywood Actresses" />
 <meta property="og:description"   content=" " />
     </head>
